<resources>
    <string name="app_name">GPhotoSlideshow</string>
    <string name="action_settings">Settings</string>

    <!-- Menu related Strings -->
    <string name="pref_header__slideshowsettings">Slideshow Settings</string>

    <string-array name="pref_slideshowsettings_display_interval_titles">
        <item>3 seconds</item>
        <item>5 seconds</item>
        <item>10 seconds</item>
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 minutes</item>
    </string-array>
    <string-array name="pref_slideshowsettings_display_interval_values">
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
    </string-array>
    <string name="pref_slideshowsettings_display_interval_title">Display Interval</string>

    <string-array name="animation_types">
        <item>Fade</item>
        <item>Rotate And Resize</item>
    </string-array>

    <string-array name="animation_type_values">
        <item>fadein,fadeout</item>
        <item>rotate_and_grow,rotate_and_shrink</item>
    </string-array>

    <string name="pref_show_time">Show Current Time</string>
    <string name="pref_time_format">Time format (ie. YYYY-MM-dd HH:mm:ss)</string>
    <string name="pref_show_photo_description">Show Photo Details</string>
    <string name="pref_include_album_regex">Include Albums Regex</string>
    <string name="pref_exclude_album_regex">Exclude Albums Regex</string>


    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
